[tool.poetry]
name = "shapefinder"
version = "0.1.0"
description = ""
authors = ["Lukas Marti <lukas.marti@stud.fhgr.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
opencv-python = "^4.8.0.76"
DateTime = "^5.2"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
